Fix footer logo position on small screens.

--- a/client/stylesheets/sticky_footer.less
+++ b/client/stylesheets/sticky_footer.less
@@ -26,9 +26,14 @@ body {
   height: @footer-height;
   border-top: #e7e7e7 1px solid;
 
-  img {
-    height: 40px;
-    margin-top: 5px;
+  #logo {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+
+    img {
+      height: 40px;
+    }
   }
 
   a {
